# baka-sayaka

./: Cargo.toml  README.md
src/: hide_windows.rs  main.rs  unkill_advance.rs  unkill_signal.rs  utils.rs
src/assets/: embed.rs  mod.rs  unembed.rs
