[package]
name = "baka-sayaka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["embed-asset", "hide-window"]
unkill-signal = ["signal-hook"]
unkill-advance = []
embed-asset = ["rust-embed"]
hide-window = ["windows/Win32_UI_WindowsAndMessaging", "windows/Win32_Foundation"]

[dependencies]
anyhow = "1.0"
rodio = { version = "0.17", default-features = false, features = ["minimp3"] }
rust-embed = {version = "6.4",  optional = true}
signal-hook = {version = "0.3",  optional = true}
windows = { version = "0.44.0", optional = true }
